使用 Colaboratory 建立

--- a/0516.ipynb
+++ b/0516.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0516.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO06OMzSWUHDGfikQwEXxTE",
+      "authorship_tag": "ABX9TyPGYfo3tRqxRMNj1+eGsYbz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -63,7 +63,7 @@
         "id": "ScjcKEIX8drZ",
         "outputId": "bb4aaf4d-4782-492e-aedf-66fcb2467489"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
         "id": "wn2IIJJe8umo",
         "outputId": "54a40652-1570-4347-ae19-589c1d63c080"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "id": "lOMqWJ0B81OV",
         "outputId": "0b5226dd-5686-4966-bef4-28f2504fcbf3"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,7 +133,7 @@
         "id": "wQk9dpEs85Sf",
         "outputId": "50b591a2-8e64-4af8-b755-6ff184b0d91d"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
         "id": "0dDqgcOn9mYu",
         "outputId": "2ada698c-baa4-4dfe-f517-121e1d1113f9"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
         "id": "rWTMCmdo_Bvd",
         "outputId": "e4836580-40a9-4140-a7c1-d51c8b4f7718"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -205,7 +205,7 @@
         "id": "rPjQuYhMAPoH",
         "outputId": "c7343f0c-45c9-4123-b281-41a4dcc3162e"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,7 +229,7 @@
         "id": "IB5bKyVpAXkr",
         "outputId": "b05a4d8b-8acc-46dd-ab07-0ecf30e9995f"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -253,7 +253,7 @@
         "id": "zdFYGZCRA8YK",
         "outputId": "1ff66416-02df-4f99-cca5-9fb576679b3b"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -277,7 +277,7 @@
         "id": "Ww6hu-vBBT5O",
         "outputId": "b60f8e55-7ac8-4493-8e91-67c93e88e608"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
         "id": "5zsFfiS1BUPP",
         "outputId": "e72727b5-6ffd-484f-f89a-c9117110b03a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,7 +325,7 @@
         "id": "-rWtqex0BUW1",
         "outputId": "13f56fcb-b692-46fb-cc2a-a9c7aeb3e12d"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -349,7 +349,7 @@
         "id": "V8yYZj9ODbft",
         "outputId": "1996c63c-744d-4cd4-8ab4-2afcd17285dd"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +375,7 @@
         "id": "95MGsZU5DtSH",
         "outputId": "42b8bddd-63ce-49df-c303-dbf8734f6b47"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -399,7 +399,7 @@
         "id": "krucxtcMD172",
         "outputId": "1523b735-1366-46af-faef-622d5a8c8dda"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,8 +413,8 @@
     {
       "cell_type": "code",
       "source": [
-        "tent = int(input(\"請輸入一個正整數\"))\n",
-        "for n in range(1,tent+1):\n",
+        "test = int(input(\"請輸入一個正整數\"))\n",
+        "for n in range(1,test+1):\n",
         "  print(n,end =\" \")"
       ],
       "metadata": {
@@ -422,9 +422,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zTbhCj1OEFqW",
-        "outputId": "52efc88a-9f83-4d55-85e8-4cc04e000612"
+        "outputId": "2ad3e7cc-1aa4-4e09-b8e5-c194069d27db"
       },
-      "execution_count": 72,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,7 +451,7 @@
         "id": "b-qsWiayJp9A",
         "outputId": "1a46e00c-3fb3-4472-d4e9-e67cd1cc0131"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,7 +477,7 @@
         "id": "efogXoh4Kuq6",
         "outputId": "e3daebab-0066-4bf6-b406-7355236b69e7"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,20 +491,20 @@
     {
       "cell_type": "code",
       "source": [
-        "tent = int(input(\"請輸入一個正整數:\"))\n",
+        "test = int(input(\"請輸入一個正整數:\"))\n",
         "sum = 0\n",
-        "for n in range(1,tent+1):\n",
+        "for n in range(1,test+1):\n",
         "  sum = sum + n\n",
-        "print(\"1到\",tent,\"的整數和為\",sum,end =\" \")"
+        "print(\"1到\",test,\"的整數和為\",sum,end =\" \")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1Zych-MRL2R1",
-        "outputId": "8b9b6ceb-bfc5-488b-c88f-197e582bee72"
+        "outputId": "84602899-e28f-4c58-d4d4-1aaf7da4fb38"
       },
-      "execution_count": 74,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -519,9 +519,9 @@
     {
       "cell_type": "code",
       "source": [
-        "tent = int(input(\"請輸入一個正整數:\"))\n",
+        "test = int(input(\"請輸入一個正整數:\"))\n",
         "sum = 0\n",
-        "for n in range(1,tent+1):\n",
+        "for n in range(1,test+1):\n",
         "  sum = sum + n\n",
         "  print(\"1到\",n,\"的整數和為:\",sum,end = \"\\n\")"
       ],
@@ -530,9 +530,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6UPkyvKMMuWJ",
-        "outputId": "fa54681c-f746-4a6f-e10c-910782b212d2"
+        "outputId": "4756223b-c29e-4518-c5d0-f10719d2a933"
       },
-      "execution_count": 78,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "stream",
