使用 Colaboratory 建立

--- a/0523.ipynb
+++ b/0523.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0523.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPIGJQwEMt1N4UngN4oKE7c",
+      "authorship_tag": "ABX9TyOVEaDoW+S1s5TIb7seKuXn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -380,7 +380,7 @@
     {
       "cell_type": "code",
       "source": [
-        "a = int(input(\"請輸入 a 的值:\"))\n",
+        "a = int(input(\"請輸入正整數:\"))\n",
         "for n in range(1,a+1):\n",
         "  if n % 5 == 0:\n",
         "    continue\n",
@@ -392,16 +392,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SUvWCT7yXnVi",
-        "outputId": "f93a484f-988c-48fa-8fb2-422bc7c8dec3"
+        "outputId": "0ea5c722-6543-4bad-83f2-1f1de94d9ba4"
       },
-      "execution_count": 72,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "請輸入 a 的值:12\n",
-            "1 2 3 4 6 7 8 9 11 12 "
+            "請輸入正整數:21\n",
+            "1 2 3 4 6 7 8 9 11 12 13 14 16 17 18 19 21 "
           ]
         }
       ]
