使用 Colaboratory 建立

--- a/0530.ipynb
+++ b/0530.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "0530.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP53sP6i166HW+EsGBCQgi3",
+      "authorship_tag": "ABX9TyPZEiQPrEUdkbQLmFkbPO2L",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -301,6 +301,44 @@
           "name": "stdout",
           "text": [
             "數值1～100中，所有是3或7倍數的數之總和 = 2208\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "p = 1\n",
+        "counter = 0\n",
+        "n = int(input(\"請輸入正整數: \"))\n",
+        "print(n,\"的因數有\",end=\" \")\n",
+        "while (p <= n):\n",
+        "  if (n%p==0):\n",
+        "    print(p,end=\" \")\n",
+        "    counter += 1\n",
+        "  p += 1\n",
+        "print()\n",
+        "if (counter == 2):\n",
+        "  print(n,\"是質數\")\n",
+        "else:\n",
+        "  print(n,\"不是質數\")"
+      ],
+      "metadata": {
+        "id": "9C94jgd0C_-V",
+        "outputId": "4b871323-27b5-4945-f041-7cf0285ed651",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "請輸入正整數: 12\n",
+            "12 的因數有 1 2 3 4 6 12 \n",
+            "12 不是質數\n"
           ]
         }
       ]
